--- a/about.html
+++ b/about.html
@@ -5,13 +5,9 @@ title: About
 ---
 ## About
 
-Github's Octocat was designed by Simon Oxley, alongside the white bird Twitter used (before they received a proper logo) as part of a usual routine of cranking out images for iStock. GitHub saw it, and wanted it, presumably under the notion that it can represent how complex code combines to create peculiar things, much like the octopuss... except the CEO of GitHub called it an octocat, and it has been the octocat since <a href="https://www.quora.com/GitHub/What-is-the-story-behind-GitHub%E2%80%99s-octocat-mascot" target="_blank">[via]</a>.
+My research is primarily focused on terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). My research is performed using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
 
 <small>
-Octocat is Github's logo and trademark and here is used to illustrate a fictional character (John Smith) that used the *{ Personal }* Jekyll Theme to build his website.
+Postdoctoral Fellow at Stellenbosch University, South Africa
 </small>
 
-Support the repo by starring or forking it!
-
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-<iframe src="https://ghbtns.com/github-btn.html?user=panossakkos&repo=personal-jekyll-theme&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
