--- a/publications.html
+++ b/publications.html
@@ -3,11 +3,31 @@ layout: null
 section-type: publications
 title: Publications
 ---
-## About
 
-My research is primarily focused on terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). My research is performed using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
+Please visit my [impact story](http://impactstory.org/MattHill) account to download .pdfs and view altmetrics, or my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information. 
 
-<small>
-Postdoctoral Fellow at Stellenbosch University, South Africa
-</small>
+##  Journal Publications
 
+* <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2015) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
+
+* <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal special- isation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023.
+ 
+* Parida, M., Hoffmann, A. A., & <strong>Hill MP</strong> (2015). Climate change expected to drive habitat loss for two key herbivore species in an alpine environment. <em> Journal of Biogeography </em> 42, 1210–1221
+
+* <strong>Hill MP</strong>, Terblanche JS (2014) Niche overlap of congeneric invaders supports a single-species hypothesis and provides insight into future invasion risk: implications for global management of the <em>Bactocera dorsalis</em> complex. <em>PLoSone</em> 9(2), e90121.
+
+* <strong>Hill MP</strong>, Axford JK, Hoffmann AA (2014) Predicting the spread of <em>Aedes albopictus </em> in Australia under current and future climates: multiple approaches and data sets to incorporate evolutionary divergence. <em>Austral Ecology</em> 39(4), 469-478
+
+* <strong>Hill MP</strong>, Chown, SL, Hoffmann AA (2013) A predicted niche shift corresponds with increased thermal resistance in an invasive mite, <em>Halotydeus destructor</em>. <em>Global Ecology & Biogeography</em> 22, 942-951.
+
+* <strong>Hill MP</strong>, Hoffmann AA, Macfadyen S, Umina, PA, Elith J (2012) Understanding niche shifts: using current and historical data to model the invasive redlegged earth mite, <em>Halotydeus destructor</em>. <em>Diversity & Distributions </em>18, 191–203
+
+* <strong>Hill MP</strong>, Umina PA, McColl S, Hoffmann AA (2012) Distribution of cryptic blue oat mite species (<em>Penthaleus</em> spp.) in Australia: current and future climate conditions.<em> Agricultural and Forest Entomology </em> 14, 127–137
+
+* Arthur AL, Weeks AR, <strong>Hill MP</strong>, Hoffmann AA (2011) The distribution, abundance and life cycle of the pest mites <em>Balaustium medicagoense </em> (Prostigmata: Erythraeidae) and <em>Bryobia </em> spp. (Prostigmata: Tetranychidae) in Australia. <em>Australian Journal of Entomology </em>50, 22–36
+
+
+##  Book Chapters
+
+
+* <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
