trying small tags

--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@ title: About
 ---
 ## About
 
-My research is primarily focused on terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). My research is performed using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
+I'm currently a Postdoctoral Fellow at Stellenbosch University, South Africa. My research is primarily focused on terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). I investigate ecological ideas using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
 
-<small>
-Postdoctoral Fellow at Stellenbosch University, South Africa
-</small>
+I'm also interested in new ways of doing science, particuarly online tools for collaboration and knowledge transfer. 
+
+When I'm not at my computer, I'm probably on my mountain bike.
 
