--- a/publications.html
+++ b/publications.html
@@ -3,14 +3,15 @@ layout: null
 section-type: publications
 title: Publications
 ---
+## Publications
 
 Please visit my [impact story](http://impactstory.org/MattHill) account to download .pdfs and view altmetrics, or my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information. 
 
-##  Journal Publications
+##  Journal 
 
 * <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2015) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
 
-* <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal special- isation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023.
+* <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal specialisation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023.
  
 * Parida, M., Hoffmann, A. A., & <strong>Hill MP</strong> (2015). Climate change expected to drive habitat loss for two key herbivore species in an alpine environment. <em> Journal of Biogeography </em> 42, 1210–1221
 
