--- a/publications.html
+++ b/publications.html
@@ -5,11 +5,15 @@ title: Publications
 ---
 ## Publications
 
-Please visit my [impact story](http://impactstory.org/MattHill) account to download .pdfs and view altmetrics, or my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information. 
+Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information. 
 
 ##  Journal 
 
-* <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2015) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
+* <strong> Hill MP </strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (under review) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. 
+
+* Gibert P, <strong> Hill MP </strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (under review) Drosophila as models to understand the adaptive process during invasion. 
+
+* <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
 
 * <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal specialisation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023.
  
@@ -28,7 +32,8 @@ Please visit my [impact story](http://impactstory.org/MattHill) account to downl
 * Arthur AL, Weeks AR, <strong>Hill MP</strong>, Hoffmann AA (2011) The distribution, abundance and life cycle of the pest mites <em>Balaustium medicagoense </em> (Prostigmata: Erythraeidae) and <em>Bryobia </em> spp. (Prostigmata: Tetranychidae) in Australia. <em>Australian Journal of Entomology </em>50, 22–36
 
 
-##  Book Chapters
+##  Book Chapters and editorials
 
+* <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (in review) Drivers, impacts, mechanisms and adaptation in insect invasions
 
 * <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
