--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 ---
 ## About
 
-I'm currently a Postdoctoral Fellow at Stellenbosch University, South Africa. My research is primarily focused on terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). I investigate ecological ideas using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
+My research is primarily focused on the ecology terrestrial arthropods, such as insects and mites, and how they interact with their environments (niche theory). I investigate ecological ideas using multiple techniques, such as species distribution modelling, ecophysiological studies and population genetics. I am particularly interested in how these different lines of inquiry may intersect to address important questions in ecology and evolutionary biology. I especially focus on questions relating to biological invasion and climate change and how these relate to both conservation of biodiversity and food security into the future.
 
 I'm also interested in new ways of doing science, particularly online tools for collaboration and knowledge transfer. 
 
