fixed syntax on publications

--- a/publications.html
+++ b/publications.html
@@ -9,21 +9,21 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal 
 
-* <strong> Hill MP </strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (under review) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. 
+* <strong> Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (under review) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. 
 
-* Gibert P, <strong> Hill MP </strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (under review) Drosophila as models to understand the adaptive process during invasion. 
+* Gibert P, <strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (under review) Drosophila as models to understand the adaptive process during invasion. 
 
 * <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
 
-* <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal specialisation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023.
+* <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal specialisation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023
  
-* Parida, M., Hoffmann, A. A., & <strong>Hill MP</strong> (2015). Climate change expected to drive habitat loss for two key herbivore species in an alpine environment. <em> Journal of Biogeography </em> 42, 1210–1221
+* Parida M, Hoffmann, AA, & <strong>Hill MP</strong> (2015) Climate change expected to drive habitat loss for two key herbivore species in an alpine environment. <em> Journal of Biogeography </em> 42, 1210–1221
 
-* <strong>Hill MP</strong>, Terblanche JS (2014) Niche overlap of congeneric invaders supports a single-species hypothesis and provides insight into future invasion risk: implications for global management of the <em>Bactocera dorsalis</em> complex. <em>PLoSone</em> 9(2), e90121.
+* <strong>Hill MP</strong>, Terblanche JS (2014) Niche overlap of congeneric invaders supports a single-species hypothesis and provides insight into future invasion risk: implications for global management of the <em>Bactocera dorsalis</em> complex. <em>PLoSone</em> 9(2), e90121
 
 * <strong>Hill MP</strong>, Axford JK, Hoffmann AA (2014) Predicting the spread of <em>Aedes albopictus </em> in Australia under current and future climates: multiple approaches and data sets to incorporate evolutionary divergence. <em>Austral Ecology</em> 39(4), 469-478
 
-* <strong>Hill MP</strong>, Chown, SL, Hoffmann AA (2013) A predicted niche shift corresponds with increased thermal resistance in an invasive mite, <em>Halotydeus destructor</em>. <em>Global Ecology & Biogeography</em> 22, 942-951.
+* <strong>Hill MP</strong>, Chown, SL, Hoffmann AA (2013) A predicted niche shift corresponds with increased thermal resistance in an invasive mite, <em>Halotydeus destructor</em>. <em>Global Ecology & Biogeography</em> 22, 942-951
 
 * <strong>Hill MP</strong>, Hoffmann AA, Macfadyen S, Umina, PA, Elith J (2012) Understanding niche shifts: using current and historical data to model the invasive redlegged earth mite, <em>Halotydeus destructor</em>. <em>Diversity & Distributions </em>18, 191–203
 
