--- a/publications.html
+++ b/publications.html
@@ -9,9 +9,9 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal 
 
-* <strong> Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (in press) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em>
+* <strong> Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> doi:10.1007/s10530-016-1078-5
 
-* Gibert P, <strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (in press) <em>Drosophila as models to understand the adaptive process during invasion</em>. <em>Biological Invasions</em>
+* Gibert P, <strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> doi:10.1007/s10530-016-1087-4
 
 * <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
 
@@ -34,6 +34,6 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Book Chapters and editorials
 
-* <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (in press) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em>
+* <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> doi:10.1007/s10530-016-1088-3
 
 * <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
