added mountain image

--- a/about.html
+++ b/about.html
@@ -11,3 +11,6 @@ I'm also interested in new ways of doing science, particularly online tools for 
 
 When I'm not at my computer, I'm probably on my mountain bike.
 
+![alt text](/img/1431326263778.jpg "Mountain")
+
+
