--- a/about.html
+++ b/about.html
@@ -13,4 +13,4 @@ When I'm not at my computer, I'm probably on my mountain bike.
 
 ![alt text](/img/1431326263778.jpg "Mountain")
 
-
+<img align="center" src="/img/1431326263778.jpg" /> 
