updated publications and about sections

--- a/publications.html
+++ b/publications.html
@@ -5,18 +5,18 @@ title: Publications
 ---
 ## Publications
 
-Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information. 
+Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp21-AAAAAJ&hl=en) account to view citation information.
 
-##  Journal 
+##  Journal
 
-* <strong> Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> doi:10.1007/s10530-016-1078-5
+* <strong> Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> 18, 1105-1119
 
-* Gibert P, <strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> doi:10.1007/s10530-016-1087-4
+* Gibert P, <strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> 18, 1089-1103
 
-* <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> DOI: 10.1111/ddi.12385.
+* <strong> Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> 22, 57-72
 
 * <strong>Hill MP</strong>, Malan, AP, & Terblanche, JS (2015) Divergent thermal specialisation of two South African entomopathogenic nematodes. <em> PeerJ </em> 3, e1023
- 
+
 * Parida M, Hoffmann, AA, & <strong>Hill MP</strong> (2015) Climate change expected to drive habitat loss for two key herbivore species in an alpine environment. <em> Journal of Biogeography </em> 42, 1210–1221
 
 * <strong>Hill MP</strong>, Terblanche JS (2014) Niche overlap of congeneric invaders supports a single-species hypothesis and provides insight into future invasion risk: implications for global management of the <em>Bactocera dorsalis</em> complex. <em>PLoSone</em> 9(2), e90121
@@ -34,6 +34,6 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Book Chapters and editorials
 
-* <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> doi:10.1007/s10530-016-1088-3
+* <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> 18, 883-891
 
 * <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
