--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * <strong>Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> 18, 1105-1119
 
-* Gibert P,<strong> Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> 18, 1089-1103
+* Gibert P, <strong>Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> 18, 1089-1103
 
 * <strong>Hill MP</strong>, Hoffmann, AA, Umina, PA, Cheng, X & Miller, AD. (2016) Genetic analysis along an invasion pathway reveals endemic cryptic taxa, but a single species with little population structure in the novel range. <em>Diversity & Distributions </em> 22, 57-72
 
@@ -34,7 +34,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Book Chapters and editorials
 
-* Macfadyen S, <strong> Hill MP (in press) "Arthropod pests of Australian canola during crop emergence: IPM and future directions". CABI
+* Macfadyen S, <strong>Hill MP</strong> (in press) "Arthropod pests of Australian canola during crop emergence: IPM and future directions". CABI
 
 * <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> 18, 883-891
 
