--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,8 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
+* Macfadyen S, McDonald G, <strong>Hill MP</strong> (2016) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> in press.
+
 * <strong>Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> 18, 1105-1119
 
 * Gibert P, <strong>Hill MP</strong>, Pascual M, Plantamp C, Terblanche JS, Yassin A, Sgrò CM (2016) <em>Drosophila</em> as models to understand the adaptive process during invasion. <em>Biological Invasions</em> 18, 1089-1103
