--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 ---
 ## About
 
-I'm interested in tiny animals - terrestrial invertebrates, things like insects, mites, spiders etc. They are incredibly interesting, and provide some of the best models we have to unravel ecology and understand the world. I'm also interested in some of the big questions we are challenged by, such as climate change and sustainable food production. Invertebrates are really important to agricultural production, human health and ecosystem function, and all these systems and species within them will be affected by climate change. 
+I'm interested in tiny animals - terrestrial invertebrates, things like insects, mites, spiders etc. They are incredibly interesting, and provide some of the best models to unravel ecology and understand the world. I'm also interested in some of the big questions we are challenged by, such as climate change and sustainable food production. Invertebrates are really important to agricultural production, human health and ecosystem function, and all these systems and species within them will be affected by climate change.
 
 Most of my research to date has been around which processes limit the distributions of species and how we can use these limits to predict future ranges in either new geographical regions (species invasions) or in time (climate change). I investigate these ecological ideas using multiple techniques, such as species distribution modelling, ecophysiological experiments and population genetics. The most interesting types of research are combinging these methods in attempts to establish hypotheses and test them using a completely different approach.
 
