--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,11 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
-* Macfadyen S, McDonald G, <strong>Hill MP</strong> (2016) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> in press.
+* <strong>Hill MP</strong>, Gallardo B, Terblanche JS (2017) A global assessment of climatic niche shifts, and human influence, in insect invasions <em>Global Ecology & Biogeography</em> in press.
+
+* Dick JTA, Alexander, ME, Ricciardi A, Laverty C, Downey PO, Xu M, Jeschke JM, Saul W-C, <strong>Hill MP</strong>, Wasserman R, Barrios-O'Neill D, Weyl OLF, Shaw RH (2017) Functional responses can unify invasion ecology <em>Biological Invasions</em> in press.
+
+* Macfadyen S, McDonald G, <strong>Hill MP</strong> (2017) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> in press.
 
 * <strong>Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> 18, 1105-1119
 
