--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,9 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
-* <strong>Hill MP</strong>, Gallardo B, Terblanche JS (2017) A global assessment of climatic niche shifts, and human influence, in insect invasions <em>Global Ecology & Biogeography</em> in press.
+* <strong>Hill MP</strong>, Nash MA, Macfadyen S (2017) Broad spectrum pesticide application alters natural enemy communities and may facilitate secondary pest outbreaks <em>PeerJ</em> in press.
+
+* <strong>Hill MP</strong>, Gallardo B, Terblanche JS (2017) A global assessment of climatic niche shifts, and human influence, in insect invasions <em>Global Ecology & Biogeography</em> 26, 679-689
 
 * Dick JTA, Alexander, ME, Ricciardi A, Laverty C, Downey PO, Xu M, Jeschke JM, Saul W-C, <strong>Hill MP</strong>, Wasserman R, Barrios-O'Neill D, Weyl OLF, Shaw RH (2017) Functional responses can unify invasion ecology <em>Biological Invasions</em> in press.
 
@@ -44,4 +46,4 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> 18, 883-891
 
-* <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
+* <strong>Hill MP</strong>, Thomson, L (2015) "Species distribution modelling in predicting response to climate change" in Bjorkman, C & Niemelä, P (eds) <em>Climate Change and Insect Pests</em>. CABI
