--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,9 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
-* <strong>Hill MP</strong>, Nash MA, Macfadyen S (2017) Broad spectrum pesticide application alters natural enemy communities and may facilitate secondary pest outbreaks <em>PeerJ</em> in press.
+* Wu, L-H, <strong> Hill MP</strong>, Thomson LJ, Hoffmann AA (2018) Assessing the current and future biological control potential of <em> Trichogramma ostriniae </em> on its hosts <em>Ostrinia furnacalis </em>and <em>Ostrinia nubilalis </em> <em> Pest Management Science </em> in press.
+
+* <strong>Hill MP</strong>, Nash MA, Macfadyen S (2017) Broad spectrum pesticide application alters natural enemy communities and may facilitate secondary pest outbreaks <em>PeerJ</em> 5:e4179 
 
 * <strong>Hill MP</strong>, Gallardo B, Terblanche JS (2017) A global assessment of climatic niche shifts, and human influence, in insect invasions <em>Global Ecology & Biogeography</em> 26, 679-689
 
