--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * <strong>Hill MP</strong>, Gallardo B, Terblanche JS (2017) A global assessment of climatic niche shifts, and human influence, in insect invasions <em>Global Ecology & Biogeography</em> 26, 679-689
 
-* Dick JTA, Alexander, ME, Ricciardi A, Laverty C, Downey PO, Xu M, Jeschke JM, Saul W-C, <strong>Hill MP</strong>, Wasserman R, Barrios-O'Neill D, Weyl OLF, Shaw RH (2017) Functional responses can unify invasion ecology <em>Biological Invasions</em> in press.
+* Dick JTA, Alexander, ME, Ricciardi A, Laverty C, Downey PO, Xu M, Jeschke JM, Saul W-C, <strong>Hill MP</strong>, Wasserman R, Barrios-O'Neill D, Weyl OLF, Shaw RH (2017) Functional responses can unify invasion ecology <em>Biological Invasions</em> 19, 1667-1672
 
 * Macfadyen S, McDonald G, <strong>Hill MP</strong> (2017) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> in press.
 
