--- a/about.html
+++ b/about.html
@@ -5,12 +5,10 @@ title: About
 ---
 ## About
 
-I'm interested in tiny animals - terrestrial invertebrates, things like insects, mites, spiders etc. They are incredibly interesting, and provide some of the best models to unravel ecology and understand the world. I'm also interested in some of the big questions we are challenged by, such as climate change and sustainable food production. Invertebrates are really important to agricultural production, human health and ecosystem function, and all these systems and species within them will be affected by climate change.
+I'm a research scientist at Data61, CSIRO. My research is mainly focused on developing analytical solutions for questions relating to biosecurity.
 
-Most of my research to date has been around which processes limit the distributions of species and how we can use these limits to predict future ranges in either new geographical regions (species invasions) or in time (climate change). I investigate these ecological ideas using multiple techniques, such as species distribution modelling, ecophysiological experiments and population genetics. The most interesting types of research are combinging these methods in attempts to establish hypotheses and test them using a completely different approach.
+Typically I work on projects involving invertebrates in agricultural systems, and use models to make predictions on how individual species and ecological communities may be affected by global processes such as climate change, biological invasions and application of pesticides. To tackle these large-scale problems I employ multiple analytical techniques, such as community ecology, species distribution modelling, ecophysiological experiments and population genetic studies.
 
-These days I'm getting more into questions around community ecology. Basically, examining the types of invertebrates that are found in a crop system and how the different members of the community and the roles they play can lead to better long-term production, including a reduction in the use of pesticides. Specifically I'm intersted in which species co-occur with others and how this changes between different regions. This type of information can help us work out different management techniques that promote abundance of the beneficial types of invertebrates, in order to increase suppression of the ones causing problems - the pests.
+I'm also involved in projects looking to quantify risk posed by non-native species, by understanding population dynamics and spatial processes that define the distribution and abundance of species that might arrive or establish in Australia.
 
-I'm also interested in new ways of doing science, particularly online tools for collaboration and knowledge transfer. I'm trying to get more active on services like github to share my attempts at R and Python analysis and hopefully that will help me advance those skills and perhaps even benefit someone else?
-
-When I'm not at my computer, I'm probably on my mountain bike, reading a Sci-Fi novel or whipping up a mean vegetable curry. All of these activities are of course better with a decent glass of wine too.
+When I'm not at my computer, I'm probably on my mountain bike, reading a Sci-Fi novel or whipping up a mean vegetable curry. All of these activities are of course better with a decent glass of red.
