--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,8 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
+* <strong> Hill MP</strong>, Binns M, Umina PA, Hoffmann AA, Macfadyen S (2018) Climate, human influence, and the distribution limits of the invasive European earwig, <em>Forficula auricularia</em>, in Australia. <em> Pest Management Science </em> In review.
+
 * Davies S, <strong> Hill MP</strong>, McGeoch MA, Clusella-Trullas S (2018) Niche shift in a recent amphibian invasion corresponds with increased availability of artificial water bodies. <em> Diversity & Distributions </em> Accepted.
 
 * Wu L-H, <strong> Hill MP</strong>, Thomson LJ, Hoffmann AA (2018) Assessing the current and future biological control potential of <em> Trichogramma ostriniae </em> on its hosts <em>Ostrinia furnacalis </em>and <em>Ostrinia nubilalis </em> <em> Pest Management Science </em> in press.
