--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * Davies S, <strong> Hill MP</strong>, McGeoch MA, Clusella-Trullas S (2018) Niche shift and resource supplementation facilitate an amphibian range expansion <em> Diversity & Distributions </em> In press.
 
-* Wu L-H, <strong> Hill MP</strong>, Thomson LJ, Hoffmann AA (2018) Assessing the current and future biological control potential of <em> Trichogramma ostriniae </em> on its hosts <em>Ostrinia furnacalis </em>and <em>Ostrinia nubilalis </em> <em> Pest Management Science </em> in press.
+* Wu L-H, <strong> Hill MP</strong>, Thomson LJ, Hoffmann AA (2018) Assessing the current and future biological control potential of <em> Trichogramma ostriniae </em> on its hosts <em>Ostrinia furnacalis </em>and <em>Ostrinia nubilalis </em> <em> Pest Management Science </em> 74, 1513-1523
 
 * <strong>Hill MP</strong>, Nash MA, Macfadyen S (2017) Broad spectrum pesticide application alters natural enemy communities and may facilitate secondary pest outbreaks <em>PeerJ</em> 5:e4179 
 
@@ -21,7 +21,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * Dick JTA, Alexander, ME, Ricciardi A, Laverty C, Downey PO, Xu M, Jeschke JM, Saul W-C, <strong>Hill MP</strong>, Wasserman R, Barrios-O'Neill D, Weyl OLF, Shaw RH (2017) Functional responses can unify invasion ecology <em>Biological Invasions</em> 19, 1667-1672
 
-* Macfadyen S, McDonald G, <strong>Hill MP</strong> (2017) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> 253, 208=219
+* Macfadyen S, McDonald G, <strong>Hill MP</strong> (2018) From species distributions to climate change adaptation: knowledge gaps in managing invertebrate pests in broad-acre grain crops <em>Agriculture, Ecosystems & Environment</em> 253, 208-219
 
 * <strong>Hill MP</strong>, Bertelsmeier C, Clusella-Trullas S, Garnas JR, Robertson MP, Terblanche JS (2016) Predicted decrease in global climate suitability masks regional complexity of invasive fruit fly species response to climate change. <em>Biological Invasions</em> 18, 1105-1119
 
@@ -48,7 +48,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Book Chapters and editorials
 
-* Macfadyen S, <strong>Hill MP</strong> (in press) "Arthropod pests of Australian canola during crop emergence: IPM and future directions". CABI
+* Macfadyen S, <strong>Hill MP</strong> (2017) "Arthropod pests of Australian canola during crop emergence: IPM and future directions" in Reddy, GVP (ed), <em>Integrated Management of Insect Pests on Canola and Other Brassica Oilseed Crops</em>. CABI
 
 * <strong>Hill MP</strong>, Clusella-Trullas S, Terblanche JS, Richardson DM (2016) Drivers, impacts, mechanisms and adaptation in insect invasions. <em>Biological Invasions</em> 18, 883-891
 
