--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 * Macfadyen S, Moradi-Vajargah M, Umina PA, Hoffmann AA, Nash MA, Holloway J, Severtson D, <strong>Hill MP</strong>, Van Helden M, Barton B (2019) Identifying critical research gaps that limit control options for invertebrate pests in Australian grain production systems (accepted) <em> Austral Entomology </em>
 
-* <strong> Hill MP</strong>, Binns M, Umina PA, Hoffmann AA, Macfadyen S (2018) Climate, human influence, and the distribution limits of the invasive European earwig, <em>Forficula auricularia</em>, in Australia. <em> Pest Management Science </em> In press.
+* <strong> Hill MP</strong>, Binns M, Umina PA, Hoffmann AA, Macfadyen S (2019) Climate, human influence, and the distribution limits of the invasive European earwig, <em>Forficula auricularia</em>, in Australia. <em> Pest Management Science </em> 75, 134-143
 
 * Davies S, <strong> Hill MP</strong>, McGeoch MA, Clusella-Trullas S (2018) Niche shift and resource supplementation facilitate an amphibian range expansion <em> Diversity & Distributions </em> In press.
 
