--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@ Please visit my [google scholar](https://scholar.google.co.za/citations?user=Vyp
 
 ##  Journal
 
-* Macfadyen S, Moradi-Vajargah M, Umina PA, Hoffmann AA, Nash MA, Holloway J, Severtson D, <strong>Hill MP</strong>, Van Helden M, Barton B (2019) Identifying critical research gaps that limit control options for invertebrate pests in Australian grain production systems (accepted) <em> Austral Entomology </em>
+* Macfadyen S, Moradi-Vajargah M, Umina PA, Hoffmann AA, Nash MA, Holloway J, Severtson D, <strong>Hill MP</strong>, Van Helden M, Barton M (2019) Identifying critical research gaps that limit control options for invertebrate pests in Australian grain production systems (accepted) <em> Austral Entomology </em>
 
 * <strong> Hill MP</strong>, Binns M, Umina PA, Hoffmann AA, Macfadyen S (2019) Climate, human influence, and the distribution limits of the invasive European earwig, <em>Forficula auricularia</em>, in Australia. <em> Pest Management Science </em> 75, 134-143
 
